# charu.ai

./: .env.example  .gitignore  README.md  TODO.md  alembic.ini  mssing_features_todo.md  notes.md  pyproject.toml  ruff.toml  run_tests.sh
.claude/: settings.json
.pm/research/: 75-bugfix-voice-onboarding-cleanup.md  76-ai-feature-audit-report.md  77-correctness-doc-gaps.md  78-task-tool-parity-implementation.md  79-goal-model-service-tools-implementation.md  80-calendar-gmail-full-tools-expansion.md  81-deterministic-adk-voice-evals-and-backlog.md  82-voice-full-tools-parity.md  83-dashboard-api-feature-closure.md  84-voice-reliability-feature-closure.md  85-website-dashboard-ui-api-parity.md  86-website-frontend-tests.md  87-website-world-class-polish.md  88-pending-feature-closure-audit.md  89-hybrid-embedding-task-deduplication.md  90-email-automation-urgent-calls-auto-tasks.md  91-landing-page-cro-copywriting.md  92-dashboard-backend-feature-readiness-audit.md
app/: celery_app.py  config.py  db.py  dependencies.py  main.py  utils.py
app/agents/: __init__.py
app/api/: auth_sync.py  chat.py  dashboard.py  google_oauth.py  health.py  voice.py  whatsapp.py
app/auth/: firebase.py  twilio.py
app/models/: __init__.py  call_log.py  call_window.py  enums.py  goal.py  (+10 more)
migrations/: env.py
tests/: conftest.py  test_anti_habituation.py  test_call_log_service.py  test_call_management_service.py  test_call_window_service.py  test_dispatch_broker_rollback.py  test_goal_service.py  test_google_api_wrapper_txn.py  test_sweep_reclaim_version_fence.py  test_task_service.py
(+144 files in other folders)
